--- a/css/main.scss
+++ b/css/main.scss
@@ -37,16 +37,33 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 
-    h1{margin-bottom: 30px; font-size: 2rem;}
+    h1{font-size: 2rem;}
+
+    form{
+        h2{text-align: center;margin-bottom: 5px;}
+        input, select{
+            font-family: Inter;
+            padding: 5px 10px;
+            border-radius: 3px;
+            font-size: 0.85rem;
+            border: 1px solid #777;
+        }
+    }
 
     .list-pokemons{
+        margin-top: 20px;
         width: 100%;
         flex-grow: 1;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         gap: 15px;
+
+        h1{
+            color: #111;
+        }
 
         >li{
             width: 270px;
